<resources>
    <string name="app_name">Memento mori</string>

    <string name="settings">Settings</string>
    <string name="hint_set_birthday">Set your birthday</string>
    <string name="hint_set_death">Set date of your death</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="date_dialog_date">Choose date</string>
    <string name="date_button">Ok</string>
    <string name="buttonSettings">Settings</string>

</resources>
